<resources>
    <string name="app_name">MVVM</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="vote">Vote</string>
    <string name="original_language">Original Language</string>
    <string name="popularity">Popularity</string>
    <string name="overview">Overview</string>
    <string name="no_data">No Data</string>
</resources>
