<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_8sdp"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/_15sdp"
        app:cardElevation="@dimen/_12sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_bright"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@android:color/white"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textAllCaps="true"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_24ssp"
                android:layout_marginTop="@dimen/_16sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:maxLength="50"
                android:text="@string/date" />

            <TextView
                android:id="@+id/tv_vote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:maxLength="50"
                android:text="@string/vote" />

            <TextView
                android:id="@+id/tv_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:maxLength="50"
                android:text="@string/original_language" />

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:maxLength="50"
                android:text="@string/genre" />

            <TextView
                android:id="@+id/tv_popularity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:maxLength="50"
                android:text="@string/popularity" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:maxLength="50"
                android:text="@string/overview" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>